<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_inicio"
        android:layout_marginTop="10dp"
        android:icon="@drawable/ic_home"
        android:title="@string/inicio" />

    <item
        android:id="@+id/nav_usuario"
        android:layout_marginTop="10dp"
        android:icon="@drawable/ic_user"
        android:title="@string/usuario" />

    <item
        android:id="@+id/nav_buscar"
        android:layout_marginTop="10dp"
        android:icon="@drawable/ic_search"
        android:title="@string/buscador" />

    <item
        android:id="@+id/nav_citas"
        android:layout_marginTop="10dp"
        android:icon="@drawable/ic_date"
        android:title="@string/citas" />

    <item
        android:id="@+id/nav_favoritos"
        android:layout_marginTop="10dp"
        android:icon="@drawable/ic_favorite"
        android:title="@string/mis_favoritos" />
</menu>