<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white"
    tools:context=".Usuario.NuevoUsuarioActivity">

    <!-- Logo -->
    <ImageView
        android:id="@+id/logoNuevoUsuario"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:src="@drawable/vitasalud_logo_150x180"
        android:contentDescription="@string/logo_de_la_app"
        android:layout_marginBottom="8dp"
        android:scaleType="centerInside"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Título -->
    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_nueva_cuenta"
        android:textSize="22sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logoNuevoUsuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"/>

    <!-- Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/textViewTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo_electr_nico"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Contraseña -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/emailInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Teléfono -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/telefonoInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:boxStrokeColor="@color/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/passwordInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel_fono"
            android:inputType="phone"
            android:textColor="@color/colorPrimaryDark" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- CheckBox y políticas -->
    <LinearLayout
        android:id="@+id/bloquePoliticas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/telefonoInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CheckBox
            android:id="@+id/checkBoxPoliticas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acepto_las"
            android:paddingVertical="16dp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textViewPoliticas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pol_ticas_de_privacidad"
            android:paddingVertical="16dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

    <!-- Botón Crear Cuenta -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCrearCuenta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/crear_cuenta"
        android:textSize="16sp"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/bloquePoliticas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
